syntax = "proto2";

package httpapi;

message NameValuePair {
  optional string name = 1;
  optional string value = 2;
}

message HttpApiRequest {
  optional string method = 1;
  optional string uri = 2;
  optional string user = 3;
  optional string request_id = 4;
  repeated NameValuePair uri_params = 5;
  repeated NameValuePair headers = 6;
  optional bytes body_chunk = 7;
  optional bytes body = 8;
}

message HttpApiResponse {
  optional int32 status = 1;
  repeated NameValuePair headers = 2;
  optional bytes body_chunk = 3;
  optional bytes body = 4;
}
